[package]
name = "wgpu_plus_sdl2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Include egui_sdl2_platform
egui_sdl2_platform = { path = "../../" }

wgpu = "24.0.1"
egui = "0.31.1"
egui_wgpu_backend = { git = "https://github.com/dbusrepo/egui_wgpu_backend.git", version = "0.35.0" }
pollster = "0.4"
anyhow = "1.0"
